--- a/backend/package.json
+++ b/backend/package.json
@@ -8,19 +8,23 @@
     "dev": "nodemon server.js",
     "init-db": "node scripts/init-db.js"
   },
-  "keywords": ["api", "express", "james-studio"],
+  "keywords": [
+    "api",
+    "express",
+    "james-studio"
+  ],
   "author": "JameS",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "sqlite3": "^5.1.6",
+    "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "fs-extra": "^11.1.1",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
-    "fs-extra": "^11.1.1"
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
 }
-
